--- a/CaronaSocial/CaronaSocial/Storyboards/Register.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Register.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -583,7 +583,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="offerPressed:" destination="Z7f-7w-8Qs" eventType="touchUpInside" id="Dte-cv-D8w"/>
+                                    <action selector="proceed:" destination="Z7f-7w-8Qs" eventType="touchUpInside" id="z6r-pR-CPu"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -604,9 +604,6 @@
                     <navigationItem key="navigationItem" title="Oferecer Carona" largeTitleDisplayMode="always" id="fPd-ls-Lye">
                         <barButtonItem key="backBarButtonItem" title="Voltar" id="ZwA-VU-Z0k"/>
                     </navigationItem>
-                    <connections>
-                        <segue destination="ief-x0-kSb" kind="show" identifier="goToLocations" id="K5P-8S-B7i"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aGg-7r-7g4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1052,7 +1049,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lps-Sx-mxq">
-                                                    <rect key="frame" x="-1" y="0.0" width="414" height="62"/>
+                                                    <rect key="frame" x="-2" y="0.0" width="415" height="62"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 </pickerView>
                                             </subviews>
@@ -1070,7 +1067,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kNP-0v-3Qj">
-                                                    <rect key="frame" x="-1" y="0.0" width="414" height="62"/>
+                                                    <rect key="frame" x="-2" y="0.0" width="415" height="62"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 </pickerView>
                                             </subviews>
@@ -1181,7 +1178,6 @@
         <image name="progress3" width="375" height="11"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fPx-fA-iyZ"/>
         <segue reference="BMf-mN-OXj"/>
     </inferredMetricsTieBreakers>
 </document>
