--- a/CaronaSocial/CaronaSocial/Storyboards/Main.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Main.storyboard
@@ -236,7 +236,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="e6u-0M-ocQ"/>
                     </view>
-                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="lE1-8w-kHg"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="lE1-8w-kHg">
+                        <barButtonItem key="backBarButtonItem" title="Voltar" id="tHl-Qz-kfv"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="emailField" destination="YfG-wL-xQS" id="J9e-V7-ezi"/>
                         <outlet property="passwordField" destination="7pY-Vu-ea8" id="wWC-ii-jXb"/>
@@ -260,7 +262,7 @@
         <!--Home-->
         <scene sceneID="xqF-Hq-fzS">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="Home" storyboardName="Home" referencedIdentifier="Home" id="cnX-3T-Vif" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="Home" storyboardName="Home" id="cnX-3T-Vif" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="7kw-1X-3q8"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tqd-of-HRO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
