--- a/CaronaSocial/CaronaSocial/Storyboards/Requested.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Requested.storyboard
@@ -392,6 +392,11 @@
                                                     <state key="normal" title="Cancelar pedido de carona">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <integer key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </button>
                                             </subviews>
                                             <constraints>
